[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.8"
default-net = "0.12.0"

[dependencies.pnet]
version = "0.33.0"
[dependencies.pnet_datalink]
version = "0.33.0"